--- a/ConfigMap.yaml
+++ b/ConfigMap.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: default
   name: parameters
 data:
-  ES_URL: "https://elasticsearch-master.elastic.svc.cluster.local:9200"
+  ES_URL: "elasticsearch-master.elastic.svc.cluster.local:9200"
   ES_DATABASE: "ccc-a2"
   ES_USERNAME: "elastic"
   ES_PASSWORD: "elastic"
