--- a/ConfigMap.yaml
+++ b/ConfigMap.yaml
@@ -5,6 +5,5 @@ metadata:
   name: parameters
 data:
   ES_URL: "https://elasticsearch-master.elastic.svc.cluster.local:9200"
-  ES_DATABASE: "ccc-a2"
   ES_USERNAME: "elastic"
-  ES_PASSWORD: "elastic"
+  ES_PASSWORD: "comp90024-elastic"
