--- a/mastodon_real_time/requirements.txt
+++ b/mastodon_real_time/requirements.txt
@@ -1,11 +1,11 @@
-pytz==2024.1
-tqdm==4.66.4
-Mastodon.py==1.8.1
-requests==2.31.0
-textblob==0.17.0
-vaderSentiment==3.3.2
-
-
+pytz
+tqdm
+Mastodon.py
+requests
+textblob
+vaderSentiment
+elasticsearch
+flask
 
 
 
