--- a/specs/package-get-bom-mastodon-by-date.yaml
+++ b/specs/package-get-bom-mastodon-by-date.yaml
@@ -1,7 +1,7 @@
 include:
-- bom_mastodon/bom_mastodon.zip
+- ./backend/bom_mastodon/get_bom_mastodon_by_date.zip
 kind: ArchiveUploadSpec
-name: get-bom-mastodon-by-date-get-bom-mastodon-by-date-zip-SmEu
+name: backend-bom-mastodon-get-bom-mastodon-by-date-zip-bxGK
 
 ---
 apiVersion: fission.io/v1
@@ -19,7 +19,7 @@ spec:
   source:
     checksum: {}
     type: url
-    url: archive://get-bom-mastodon-by-date-get-bom-mastodon-by-date-zip-SmEu
+    url: archive://backend-bom-mastodon-get-bom-mastodon-by-date-zip-bxGK
 status:
   buildstatus: pending
-  lastUpdateTimestamp: "2024-05-18T05:23:21Z"
+  lastUpdateTimestamp: "2024-05-18T06:14:48Z"
